--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,21 +31,23 @@ android {
 }
 
 dependencies {
-
+    implementation platform('com.google.firebase:firebase-bom:29.0.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
 
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'com.google.firebase:firebase-database:20.0.2'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation'pl.droidsonroids.gif:android-gif-drawable:1.2.22'
     implementation 'com.google.android.material:material:1.2.0-alpha01'
-    implementation'com.google.firebase:firebase-auth:20.0.2'
-    implementation'com.firebaseui:firebase-ui:0.6.2'
-
-
+    implementation'com.firebaseui:firebase-ui:1.2.0'
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+    implementation 'com.google.firebase:firebase-core:17.0.0'
 
 
 }
