--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,10 @@ dependencies {
     implementation'com.google.firebase:firebase-auth:20.0.2'
     implementation'com.firebaseui:firebase-ui:0.6.2'
 
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+
+    implementation 'com.google.android.gms:play-services-auth:16.0.0'
+    implementation 'com.google.firebase:firebase-auth:16.0.3'
 
 
 
